--- a/FichesJoueurs.csproj
+++ b/FichesJoueurs.csproj
@@ -46,6 +46,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClasseGeneral.cs" />
+    <Compile Include="EnfantForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EnfantForm.Designer.cs">
+      <DependentUpon>EnfantForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="FichesJoueursForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -54,6 +61,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="EnfantForm.resx">
+      <DependentUpon>EnfantForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FichesJoueursForm.resx">
       <DependentUpon>FichesJoueursForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -67,6 +77,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="ClassDiagram1.cd" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
