--- a/FichesJoueurs.csproj
+++ b/FichesJoueurs.csproj
@@ -46,7 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ClasseGeneral.cs" />
+    <Compile Include="FichesJoueursClasseGeneral.cs" />
     <Compile Include="EnfantForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -77,7 +77,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <None Include="ClassDiagram1.cd" />
+    <None Include="FichesJoueursClassDiagram.cd" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
